--- a/audio_effects.conf
+++ b/audio_effects.conf
@@ -7,28 +7,31 @@
 #    }
 libraries {
   bundle {
-    path /system/lib/soundfx/libbundlewrapper.so
+    path /vendor/lib/soundfx/libbundlewrapper.so
   }
   reverb {
-    path /system/lib/soundfx/libreverbwrapper.so
+    path /vendor/lib/soundfx/libreverbwrapper.so
   }
   visualizer_sw {
-    path /system/lib/soundfx/libvisualizer.so
+    path /vendor/lib/soundfx/libvisualizer.so
   }
   visualizer_hw {
-    path /system/lib/soundfx/libqcomvisualizer.so
+    path /vendor/lib/soundfx/libqcomvisualizer.so
   }
   downmix {
-    path /system/lib/soundfx/libdownmix.so
+    path /vendor/lib/soundfx/libdownmix.so
   }
   proxy {
-    path /system/lib/soundfx/libeffectproxy.so
+    path /vendor/lib/soundfx/libeffectproxy.so
+  }
+  offload_bundle {
+    path /system/vendor/lib/soundfx/libqcompostprocbundle.so
   }
   qcom_pre_processing {
-    path /system/lib/soundfx/libqcomvoiceprocessing.so
+    path /vendor/lib/soundfx/libqcomvoiceprocessing.so
   }
   loudness_enhancer {
-    path /system/lib/soundfx/libldnhncr.so
+    path /vendor/lib/soundfx/libldnhncr.so
   }
 }
 
@@ -36,7 +39,7 @@ libraries {
 # audio HAL implements support for default software audio pre-processing effects
 #
 #  pre_processing {
-#    path /system/lib/soundfx/libaudiopreprocessing.so
+#    path /vendor/lib/soundfx/libaudiopreprocessing.so
 #  }
 
 # list of effects to load. Each effect element must contain a "library" and a "uuid" element.
@@ -78,36 +81,106 @@ effects {
   #} End of effect proxy
 
   bassboost {
-    library bundle
-    uuid 8631f300-72e2-11df-b57e-0002a5d5c51b
+    library proxy
+    uuid 14804144-a5ee-4d24-aa88-0002a5d5c51b
+
+    libsw {
+      library bundle
+      uuid 8631f300-72e2-11df-b57e-0002a5d5c51b
+    }
+
+    libhw {
+      library offload_bundle
+      uuid 2c4a8c24-1581-487f-94f6-0002a5d5c51b
+    }
   }
   virtualizer {
-    library bundle
-    uuid 1d4033c0-8557-11df-9f2d-0002a5d5c51b
+    library proxy
+    uuid d3467faa-acc7-4d34-acaf-0002a5d5c51b
+
+    libsw {
+      library bundle
+      uuid 1d4033c0-8557-11df-9f2d-0002a5d5c51b
+    }
+
+    libhw {
+      library offload_bundle
+      uuid 509a4498-561a-4bea-b3b1-0002a5d5c51b
+    }
   }
   equalizer {
-    library bundle
-    uuid ce772f20-847d-11df-bb17-0002a5d5c51b
+    library proxy
+    uuid c8e70ecd-48ca-456e-8a4f-0002a5d5c51b
+
+    libsw {
+      library bundle
+      uuid ce772f20-847d-11df-bb17-0002a5d5c51b
+    }
+
+    libhw {
+      library offload_bundle
+      uuid a0dac280-401c-11e3-9379-0002a5d5c51b
+    }
   }
   volume {
     library bundle
     uuid 119341a0-8469-11df-81f9-0002a5d5c51b
   }
   reverb_env_aux {
-    library reverb
-    uuid 4a387fc0-8ab3-11df-8bad-0002a5d5c51b
+    library proxy
+    uuid 48404ac9-d202-4ccc-bf84-0002a5d5c51b
+
+    libsw {
+      library reverb
+      uuid 4a387fc0-8ab3-11df-8bad-0002a5d5c51b
+    }
+
+    libhw {
+      library offload_bundle
+      uuid 79a18026-18fd-4185-8233-0002a5d5c51b
+    }
   }
   reverb_env_ins {
-    library reverb
-    uuid c7a511a0-a3bb-11df-860e-0002a5d5c51b
+    library proxy
+    uuid b707403a-a1c1-4291-9573-0002a5d5c51b
+
+    libsw {
+      library reverb
+      uuid c7a511a0-a3bb-11df-860e-0002a5d5c51b
+    }
+
+    libhw {
+      library offload_bundle
+      uuid eb64ea04-973b-43d2-8f5e-0002a5d5c51b
+    }
   }
   reverb_pre_aux {
-    library reverb
-    uuid f29a1400-a3bb-11df-8ddc-0002a5d5c51b
+    library proxy
+    uuid 1b78f587-6d1c-422e-8b84-0002a5d5c51b
+
+    libsw {
+      library reverb
+      uuid f29a1400-a3bb-11df-8ddc-0002a5d5c51b
+    }
+
+    libhw {
+      library offload_bundle
+      uuid 6987be09-b142-4b41-9056-0002a5d5c51b
+    }
   }
   reverb_pre_ins {
-    library reverb
-    uuid 172cdf00-a3bc-11df-a72f-0002a5d5c51b
+    library proxy
+    uuid f3e178d2-ebcb-408e-8357-0002a5d5c51b
+
+    libsw {
+      library reverb
+      uuid 172cdf00-a3bc-11df-a72f-0002a5d5c51b
+    }
+
+    libhw {
+      library offload_bundle
+      uuid aa2bebf6-47cf-4613-9bca-0002a5d5c51b
+    }
   }
   visualizer {
     library proxy
@@ -133,12 +206,21 @@ effects {
   }
   aec {
     library qcom_pre_processing
-    uuid 3770d8a0-4a7c-11e4-ac15-0002a5d5c51b
+    uuid d2f1b180-4a8c-11e5-9883-0002a5d5c51b
   }
   ns {
     library qcom_pre_processing
-    uuid 5a96f440-4a7c-11e4-8477-0002a5d5c51b
+    uuid 30890b40-4a8d-11e5-b3ee-0002a5d5c51b
   }
+}
+
+pre_processing {
+    voice_communication {
+        aec {
+        }
+        ns {
+        }
+    }
 }
 
 # Default pre-processing effects. Add to audio_effect.conf "effects" section if
@@ -196,9 +278,3 @@ effects {
 #
 # TODO: add default audio pre processor configurations after debug and tuning phase
 #
-pre_processing {
-    voice_communication {
-        aec {}
-        ns {}
-    }
-}
